--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,221 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  box-sizing: border-box;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-container {
+  position:sticky;
+  top:40px;
+  min-width: 500px;
+  min-height: max-content;
+  background-color: rgb(245, 242, 239);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  /* padding: 20px; */
+}
+.handle-todo {
+  width: inherit;
+  padding: 30px;
+}
+.header {
+  background: #361f31;
+  /* background: linear-gradient(
+    90deg,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(171, 107, 172, 1) 100%
+  ); */
+  padding: 20px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.todo-header {
+  text-align: center;
+  font-size: 40px;
+  color: white;
+  letter-spacing: 1.5px;
+}
+.todo-subheader {
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+}
+.input-todo {
+  width: 100%;
+  border: none;
+  outline: none;
+  border: 1px solid lightgrey;
+  text-align: center;
+  border-radius: 5px;
+  margin-block: 10px;
+  font-size: 18px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
+}
+.input-todo:focus {
+  transform: scale(1.02);
+  border-color: royalblue;
+}
+.checkbox-label {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  font-size: 22px;
+  line-height: 24px;
+  clear: both;
+}
+
+.checkbox-label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox-label .checkbox-custom {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 24px;
+  width: 24px;
+  background-color: transparent;
+  border-radius: 5px;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  border: 2px solid #c0baba;
+}
+
+.checkbox-label input:checked ~ .checkbox-custom {
+  background-color: #ffffff;
+  border-radius: 5px;
+  -webkit-transform: rotate(0deg) scale(1);
+  -ms-transform: rotate(0deg) scale(1);
+  transform: rotate(0deg) scale(1);
+  opacity: 1;
+  border: 2px solid #ffffff;
+}
+
+.checkbox-label .checkbox-custom::after {
+  position: absolute;
+  content: "";
+  left: 12px;
+  top: 12px;
+  height: 0px;
+  width: 0px;
+  border-radius: 5px;
+  border: solid #009bff;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(0deg) scale(0);
+  -ms-transform: rotate(0deg) scale(0);
+  transform: rotate(0deg) scale(0);
+  opacity: 1;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+}
+
+.checkbox-label input:checked ~ .checkbox-custom::after {
+  -webkit-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 8px;
+  top: 3px;
+  width: 6px;
+  height: 12px;
+  border: solid #009bff;
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
+}
+
+/* For Ripple Effect */
+.checkbox-label .checkbox-custom::before {
+  position: absolute;
+  content: "";
+  left: 10px;
+  top: 10px;
+  width: 0px;
+  height: 0px;
+  border-radius: 5px;
+  border: 2px solid #ffffff;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+}
+
+.checkbox-label input:checked ~ .checkbox-custom::before {
+  left: -3px;
+  top: -3px;
+  width: 24px;
+  height: 24px;
+  border-radius: 5px;
+  -webkit-transform: scale(3);
+  -ms-transform: scale(3);
+  transform: scale(3);
+  opacity: 0;
+  z-index: 999;
+  transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+}
+
+/* Todo value */
+.todo-name {
+  position: relative;
+  left: 30px;
+}
+/* Delete button */
+.btn {
+  width: 100%;
+  margin: 10px 0px 10px 0;
+}
+
+/* Add button */
+.add-todo {
+  position: relative;
+  left: 185px;
+  top: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 70px;
+  padding: 20px;
+  outline: none;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  background-color: #361f31;
+  color: white;
+  text-align: center;
+  margin-block-end: 20px;
+}
+.add-todo:focus {
+  outline: transparent;
+}
+.add-todo:hover {
+  background-color: lightseagreen;
+  /* transition: all .1s ease-in-out; */
+}
+.add-todo:active {
+  transform: scale(1.1);
+  background-color: slateblue;
+  color: white;
+  transition: all 0.1s ease-in-out;
 }
